--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>org.easytesting</groupId>
       <artifactId>fest-assert-core</artifactId>
-      <version>2.0M8-SNAPSHOT</version>
+      <version>2.0M8-MODULARIZATION-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
