--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <dependencies>
     <dependency>
       <groupId>org.easytesting</groupId>
-      <artifactId>fest-assert-core</artifactId>
+      <artifactId>fest-assert</artifactId>
       <version>2.0M8-MODULARIZATION-SNAPSHOT</version>
     </dependency>
     <dependency>
